# ai-image-gen

./: package-lock.json  package.json
.github/workflows/: macos_test_build.yml  release.yml
src/: App.css  App.tsx
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/crates/llmapi/: Cargo.toml  README.md
src-tauri/crates/llmapi/src/: lib.rs  types.rs  utils.rs
src-tauri/crates/llmapi/src/providers/: mod.rs
src-tauri/crates/llmapi/src/providers/anthropic/: api.rs  mod.rs  models.rs
src-tauri/crates/llmapi/src/providers/gemini/: api.rs  mod.rs  models.rs
src-tauri/crates/llmapi/src/providers/openai/: api.rs  mod.rs  models.rs
src-tauri/debug/: last_generate_image_request.json
src-tauri/input/: prompts.json
src-tauri/output/: log.json
src-tauri/src/: constants.rs  fs_utils.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: generate.rs  library.rs  mod.rs  prompts.rs
