[package]
name = "llmapi"
version = "0.1.0"
edition = "2024"
description = "Unified client for OpenAI, Anthropic, and Google Gemini APIs with a shared multimodal chat and embedding interface."
keywords = ["llm", "ai", "openai", "anthropic", "gemini", "api"]
categories = ["api-bindings", "ai", "asynchronous", "text-processing"]
license = "MIT OR Apache-2.0"       
readme = "README.md"
repository = "https://github.com/acscoder/llmapi"

[dependencies]
anyhow = "1.0.100"
base64 = "0.22.1"
mime_guess = "2.0.5"
reqwest = { version = "0.12.24", features = ["json"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }

[dev-dependencies]
serde_json = "1.0"
